<resources>
    <string name="app_name">NYC Museum Tickets</string>
    <string name="nyc_museum_tickets">NYC Museum Tickets</string>
    <string name="the_metropolitan_museum_of_art">The Metropolitan Museum of Art</string>
    <string name="image_of_the_met">image of The Met</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="calculate_ticket_price">CALCULATE TICKET PRICE</string>
    <string name="ticket_price">ticket price</string>
    <string name="ticket_total">ticket total</string>
    <string name="sales_tax">sales tax</string>
    <string name="the_museum_of_modern_art">The Museum of Modern Art</string>
    <string name="american_museum_of_natural_history">American Museum of Natural History</string>
    <string name="solomon_r_guggenheim_museum">Solomon R. Guggenheim Museum</string>
</resources>
